<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<RelativeLayout
    android:id="@+id/relative_layout"
    android:layout_width="500dp"
    android:layout_height="match_parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:id="@+id/loginLogo"
        android:src="@drawable/ic_logo_oronos"
        android:layout_marginBottom="-20dp"
        android:paddingBottom="-100dp"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="@+id/username"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:hint="@string/user_name"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="@+id/loginLogo"
        android:layout_gravity="bottom"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:gravity="center_vertical"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/linear_layout_v"
        app:layout_constraintStart_toStartOf="@+id/linear_layout_v"
        app:layout_constraintTop_toBottomOf="@+id/username"
        android:layout_gravity="bottom"/>

                <LinearLayout android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/linear_layout_h"
                    android:layout_gravity="bottom"
                    >

                    <Button
                        android:id="@+id/changeThemeButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/change_theme"
                        android:layout_gravity="center" />

                    <Button
                        android:id="@+id/changeIpButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="272dp"
                        android:text="@string/change_ip"
                        android:layout_alignLeft="@+id/changeThemeButton"
                        android:layout_gravity="bottom"/>

                </LinearLayout>
            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:padding="20dp"
                android:background="#e02534"
                android:text="@string/log_in"
                android:layout_gravity="bottom"/>
    </LinearLayout>
</RelativeLayout>

    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="111dp"
        android:layout_height="104dp"
        android:visibility="gone"
        android:layout_marginBottom="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relative_layout"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>
    